test/fixtures/valid-private/index.raml
#%RAML 0.8
---
baseUri: foo
title: foo
version: foo

documentation:
  -
    title: foo
    content: !include docs/foo.md

/foo: !include resources/foo.raml
/private: !include resources/private.raml
