test/fixtures/invalid/invalid-schemas.raml
#%RAML 0.8
---
baseUri: foo
title: foo
version: foo
schemas:
  a:
    
documentation:
  -
    title: foo
    content: 123
/a:
